k8s/kube-news/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgreesql
  namespace: kube-news
spec:
  clusterIP: None
  selector:
    app: postgreesql
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
